--- a/views/login.html
+++ b/views/login.html
@@ -181,62 +181,7 @@
         </div>
         <div class="db-status">Connecting to DB...</div>
         <script>
-            const electron = require("electron");
-            const { ipcRenderer } = electron;
-            const app = electron.remote;
-            const username = document.querySelector("#username");
-            const password = document.querySelector("#password");
-            let version = window.location.hash.substring(1);
-            username.focus();
-            document.getElementById("version").innerText = version;
-            document
-                .querySelector("form")
-                .addEventListener("submit", submitForm);
-            function submitForm(e) {
-                e.preventDefault();
-                const items = {
-                    username: username.value,
-                    password: password.value,
-                };
-
-                console.log(ipcRenderer);
-                ipcRenderer.send("auth-form", items);
-            }
-            const msgDiv = document.querySelector("#msg-cus");
-            msgDiv.innerHTML = "\n";
-            ipcRenderer.on("msg-login", function (e, item) {
-                if (item == "user-failed") {
-                    msgDiv.className = "";
-                    username.value = "";
-                    password.value = "";
-                    username.focus();
-                    msgDiv.className +=
-                        "alert alert-danger alert-dismissible show";
-                    msgDiv.innerHTML = "Incorrect Username";
-                } else if (item == "pass-failed") {
-                    msgDiv.className = "";
-                    username.value = "";
-                    password.value = "";
-                    username.focus();
-                    msgDiv.className +=
-                        "alert alert-danger alert-dismissible show";
-                    msgDiv.innerHTML = "Incorrect Password";
-                }
-            });
-            ipcRenderer.on("db", function (e, item) {
-                const version = document.querySelector(".version");
-                const dbstatus = document.querySelector(".db-status");
-                if (item == "connected") {
-                    dbstatus.innerHTML = "DB Connected";
-                } else {
-                    dbstatus.innerHTML = "DB Error";
-                }
-            });
-
-            ipcRenderer.on("appUpdate", function (event, text) {
-                var container = document.querySelector(".msg-update");
-                container.innerHTML = text;
-            });
+            require("./../src/loginRenderer");
         </script>
     </body>
 </html>
