working on product

--- a/views/upload.html
+++ b/views/upload.html
@@ -122,7 +122,31 @@
                     filters: [
                         {
                             name: "Images",
-                            extensions: ["jpg", "png", "rgb"],
+                            extensions: [
+                                "jpg",
+                                "jpeg",
+                                "png",
+                                "gif",
+                                "tif",
+                                "tiff",
+                                "bmp",
+                                "bmp",
+                                "ofm",
+                                "pdf",
+                                "ai",
+                                "zpl",
+                                "pgf",
+                                "zvc",
+                                "svg",
+                                "heic",
+                                "heif",
+                                "webp",
+                                "ogg",
+                                "mp4",
+                                "webm",
+                                "m3u8",
+                                "mov",
+                            ],
                         },
                     ],
                 });
