main process done

--- a/views/upload.html
+++ b/views/upload.html
@@ -36,10 +36,10 @@
                     <span id="file-name"></span>
                 </div>
                 <div class="col-sm-6 text-center">
-                    <span>Tag name</span>
+                    <span style="font-weight: 600">Tag name</span>
                     <input type="text" class="form-control" id="tagname" name="tagname" placeholder="Tag" />
                     <br />
-                    <span>Image type</span> <br />
+                    <span style="font-weight: 600">Image type</span> <br />
                     <div class="form-check form-check-inline">
                         <input
                             class="form-check-input"
@@ -57,7 +57,7 @@
                     </div>
                     <br />
                     <br />
-                    <span>Marketplace Department</span>
+                    <span style="font-weight: 600">Marketplace Department</span>
                     <input
                         type="text"
                         class="form-control"
