--- a/views/home.html
+++ b/views/home.html
@@ -68,6 +68,9 @@
             .btnCateSave {
                 margin-top: 10px;
             }
+            .btnLogout {
+                margin-left: 700px;
+            }
         </style>
     </head>
 
@@ -75,30 +78,21 @@
         <div id="divTest"></div>
         <nav class="navbar navbar-expand-md bg-dark navbar-dark">
             <label class="navbar-brand">Zazzle Upload Tool</label>
+            <button class="btn btn-secondary btn-xs my-xs-btn btnLogout" type="button" onclick="logoutFunc()">
+                <span class="glyphicon glyphicon-pencil"> Logout </span>
+            </button>
         </nav>
         <br />
         <!-- Tab links -->
         <div class="tab" id="tab">
-            <button class="tablinks active" onclick="openTab(event, 'account')">
-                Accounts
-            </button>
-            <button class="tablinks" onclick="openTab(event, 'product')">
-                Products
-            </button>
-            <button class="tablinks" onclick="openTab(event, 'category')">
-                Category
-            </button>
-            <button class="tablinks" onclick="openTab(event, 'logs')">
-                Logs
-            </button>
+            <button class="tablinks active" onclick="openTab(event, 'account')">Accounts</button>
+            <button class="tablinks" onclick="openTab(event, 'product')">Products</button>
+            <button class="tablinks" onclick="openTab(event, 'category')">Category</button>
+            <button class="tablinks" onclick="openTab(event, 'logs')">Logs</button>
         </div>
         <div class="col-sm-12 text-right">
-            <button
-                class="btn btn-warning btn-xs my-xs-btn btnImport"
-                type="button"
-                onclick="importFunc()"
-            >
-                <span class="glyphicon glyphicon-pencil"></span> Import Account
+            <button class="btn btn-warning btn-xs my-xs-btn btnImport" type="button" onclick="importFunc()">
+                <span class="glyphicon glyphicon-pencil"> Import Account </span>
             </button>
         </div>
         <div id="account" class="tabcontent" style="display: block">
@@ -121,11 +115,7 @@
         <div id="product" class="tabcontent">
             <h3>Products</h3>
             <textarea id="product-area" class="textarea"></textarea>
-            <button
-                class="btn btn-primary btn-xs my-xs-btn btnSave"
-                type="button"
-                onclick="saveProductFunc()"
-            >
+            <button class="btn btn-primary btn-xs my-xs-btn btnSave" type="button" onclick="saveProductFunc()">
                 <span class="glyphicon glyphicon-pencil"></span> Save
             </button>
             <div id="msg-product"></div>
@@ -133,16 +123,8 @@
 
         <div id="category" class="tabcontent">
             <h3>Category</h3>
-            <input
-                type="text"
-                class="input-category form-control"
-                id="input-category"
-            />
-            <button
-                class="btn btn-primary btn-xs my-xs-btn btnCateSave"
-                type="button"
-                onclick="saveCategoryFunc()"
-            >
+            <input type="text" class="input-category form-control" id="input-category" />
+            <button class="btn btn-primary btn-xs my-xs-btn btnCateSave" type="button" onclick="saveCategoryFunc()">
                 <span class="glyphicon glyphicon-pencil"></span> Save
             </button>
             <div style="margin-top: 10px" id="msg-cate"></div>
@@ -175,9 +157,7 @@
             //         }
             //     });
 
-            let tableRef = document
-                .getElementById("userTable")
-                .getElementsByTagName("tbody")[0];
+            let tableRef = document.getElementById("userTable").getElementsByTagName("tbody")[0];
             let productArea = document.getElementById("product-area");
             let ul = document.querySelector("ul");
             let categoryInput = document.getElementById("input-category");
@@ -205,22 +185,15 @@
                     if (err) {
                         throw err;
                     }
-                    parse(data, { columns: false, trim: true }, function (
-                        err,
-                        rows
-                    ) {
+                    parse(data, { columns: false, trim: true }, function (err, rows) {
                         tableRef.innerHTML = "";
                         for (let index = 1; index < rows.length; index++) {
                             const elements = rows[index];
                             var dataJson = JSON.stringify(elements);
-                            var str =
-                                "<th scope='row'>" + index.toString() + "</th>";
+                            var str = "<th scope='row'>" + index.toString() + "</th>";
                             elements.forEach((element, index) => {
                                 if (index == 1 || index == 4) {
-                                    str +=
-                                        "<td class='hidetext'>" +
-                                        element +
-                                        "</td>";
+                                    str += "<td class='hidetext'>" + element + "</td>";
                                 } else {
                                     str += "<td>" + element + "</td>";
                                 }
@@ -244,10 +217,7 @@
                 if (err) {
                     throw err;
                 }
-                parse(data, { columns: false, trim: true }, function (
-                    err,
-                    rows
-                ) {
+                parse(data, { columns: false, trim: true }, function (err, rows) {
                     const elements = rows[0];
                     elements.forEach((element) => {
                         productArea.value += element + "\n";
@@ -258,10 +228,7 @@
                 if (err) {
                     throw err;
                 }
-                parse(data, { columns: false, trim: true }, function (
-                    err,
-                    rows
-                ) {
+                parse(data, { columns: false, trim: true }, function (err, rows) {
                     const elements = rows[0];
                     elements.forEach((element, index) => {
                         if (index == elements.length - 1) {
@@ -280,20 +247,14 @@
                 }
                 tablinks = document.getElementsByClassName("tablinks");
                 for (i = 0; i < tablinks.length; i++) {
-                    tablinks[i].className = tablinks[i].className.replace(
-                        " active",
-                        ""
-                    );
+                    tablinks[i].className = tablinks[i].className.replace(" active", "");
                 }
                 document.getElementById(tabName).style.display = "block";
                 evt.currentTarget.className += " active";
             }
             function selectFunc(arrayData) {
                 if (arrayData[0] == "" || arrayData[1] == "") {
-                    const errMsgBox = dialog.showErrorBox(
-                        "Username or password incorrect !!!",
-                        ""
-                    );
+                    const errMsgBox = dialog.showErrorBox("Username or password incorrect !!!", "");
                 }
                 ipcRenderer.send("select-clicked", arrayData);
             }
@@ -315,17 +276,13 @@
                     const product2Path =
                         process.env.NODE_ENV === "development"
                             ? "./data/product.csv"
-                            : path.join(
-                                  process.resourcesPath,
-                                  "data/product.csv"
-                              );
+                            : path.join(process.resourcesPath, "data/product.csv");
                     fs.writeFile(product2Path, output, function (err) {
                         if (err) {
                             throw err;
                         }
                         msgDiv.style.display = "block";
-                        msgDiv.className =
-                            "alert alert-success alert-dismissible show";
+                        msgDiv.className = "alert alert-success alert-dismissible show";
                         msgDiv.innerHTML = "Successfully Saved";
                         setTimeout(() => {
                             msgDiv.style.display = "none";
@@ -351,17 +308,13 @@
                     const categoryPath =
                         process.env.NODE_ENV === "development"
                             ? "./data/category.csv"
-                            : path.join(
-                                  process.resourcesPath,
-                                  "data/category.csv"
-                              );
+                            : path.join(process.resourcesPath, "data/category.csv");
                     fs.writeFile(categoryPath, output, function (err) {
                         if (err) {
                             throw err;
                         }
                         msgCate.style.display = "flex";
-                        msgCate.className =
-                            "alert alert-success alert-dismissible show";
+                        msgCate.className = "alert alert-success alert-dismissible show";
                         msgCate.innerHTML = "Successfully Saved";
                         setTimeout(() => {
                             msgCate.style.display = "none";
@@ -383,6 +336,28 @@
                 } else {
                     navbar.classList.remove("sticky");
                 }
+            }
+            function logoutFunc() {
+                const { remote } = require("electron");
+                const dialog = remote.dialog;
+                let WIN = remote.getCurrentWindow();
+                var options = {
+                    type: "question",
+                    buttons: ["&Yes", "&No"],
+                    title: "Confirm Logout",
+                    normalizeAccessKeys: true,
+                    message: "Do you really want to logout?",
+                };
+                dialog
+                    .showMessageBox(WIN, options)
+                    .then((choice) => {
+                        if (choice.response === 0) {
+                            ipcRenderer.send("logout", "logout");
+                        }
+                    })
+                    .catch((err) => {
+                        console.log("ERROR", err);
+                    });
             }
         </script>
     </body>
